2010-05-31  vadim  <vadim@vk.crocodile.org>

	* FirewallDialog.cpp (FirewallDialog::fillVersion): fixed #1481
	when user changes platform in the firewall object, its version
	should change too.

2010-05-28  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::editSelectedObject):
	see #1447 Reverting change done for ticket #1447 in r2892 and
	r2896 because of the user complaints. It appears to be more
	convenient if Policy, NAT and Routing objects open in the rule set
	view on double click but not in the editor. Second double clik
	opens these objects in the editor.

2010-05-25  vadim  <vadim@vk.crocodile.org>

	* configure.in (CPPUNIT_LIBS): fixed #1478 always use included
	antlr run-time library. Because of the fixes I've made in
	CircularQueue?.hpp in 2008 for 64 bit systems, we should always
	link with antlr run-time that is included with fwbuilder code tree
	rather than attempt to use the one that might be installed with
	the OS.

2010-05-24  vadim  <vadim@vk.crocodile.org>

	* UserWorkflow.cpp (UserWorkflow::report): see #1466 Implemented
	instrumentation that should help us improve user experience. Will
	track few things that new users do (or don't do) and report as a
	combination of boolean flags at the end of the GUI
	session. Reporting things such as if user ever looked at the
	"Getting Started" tutorial, if they created their first firewall
	object, modified any rules, tried to compile, install or import
	existing rule set. Information passed in the report is strictly a
	set of boolean flags, it is not identifiable and does not reveal
	what firewall platform they are using or anything about their
	objects and rules. List of flags is listed in the module UserWorkflow.h

2010-05-23  vadim  <vadim@vk.crocodile.org>

	* FWCmdAddObject.cpp (FWCmdAddObject::redo): fixed #1468 Open new
	object in the editor after it has been created.

	* applied patch by Vadim Jukov <persgray@gmail.com>, maintainer of