@@ -193,6 +193,9 @@ class FWBSettings : public QSettings {
     uint getTimeOfLastUpdateAvailableWarning();
     void setTimeOfLastUpdateAvailableWarning(uint v);
     
+    uint getTimeOfLastAnnouncement(const QString &announcement);
+    void setTimeOfLastAnnouncement(const QString &announcement, uint v);
+    
     QString getTargetStatus(const QString &platform, const QString &default_stat);
     void setTargetStatus(const QString &plaform, const QString &status);
 
